<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Notification Log</string>
    <string name="admob_native_id" translatable="false">ca-app-pub-6778147776084460~5125951012</string>
    <string name="ad_native_unit_id" translatable="false">ca-app-pub-6778147776084460/6838397011</string>
    <string name="admob_app_id">ca-app-pub-XXXXXXXX~XXXXXXXXXXX</string>
    <string name="banner_home_footer">ca-app-pub-XXXXXXXX~XXXXXXXXXXX</string>
    <string name="interstitial_full_screen">ca-app-pub-XXXXXXXX~XXXXXXXXXXX</string>
    <string name="rewarded_video">ca-app-pub-XXXXXXXX~XXXXXXXXXXX</string>
    <string name="activity_browse">Notifications</string>
    <string name="activity_details">Details</string>
    <string name="settings_browse_summary_singular" translatable="false">%1$d notification</string>
    <string name="settings_browse_summary_plural" translatable="false">%1$d notifications</string>
    <string name="menu_about">About</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_export">Export</string>
    <string name="category_settings">Settings</string>
    <string name="category_actions">Actions</string>
    <string name="settings_status">Status</string>
    <string name="settings_notification_access_unknown">Unknown</string>
    <string name="settings_notification_access_enabled">Enabled</string>
    <string name="settings_notification_access_disabled">Disabled — Click here to enable</string>
    <string name="nav_browse">All Notifications</string>
    <string name="settings_browse_summary">Click here to see the most recent notifications.</string>
    <string name="action_settings" tools:ignore="MissingTranslation">Settings</string>
    <string name="hello_world" tools:ignore="MissingTranslation" translatable="false">Hello world!</string>
    <string name="favorites">Favorites</string>
    <string name="opennotifwid">Notifications</string>
    <string name="add_widget_QR">Add widget</string>
    <string name="settings_entries" translatable="false">Notifications logged</string>
    <string name="settings_text">Log text</string>
    <string name="settings_text_summary">Log the actual content of the notifications. Increases the size of the log file but allows you to read past messages.</string>
    <string name="main_browseapp">Browse Notifications</string>
    <string name="nav_apps">Notification Apps</string>
    <string name="main_exportlog">Export Logs</string>
    <string name="main_expotdescription">Export Your Logs</string>
    <string name="nav_tutorial">Tutorial</string>
    <string name="main_tutorialdes">Learn How To Use App</string>
    <string name="main_fav">Favorite</string>
    <string name="main_favdes">Your Favorite Notification Are Here</string>
    <string name="nav_share">Share App</string>
    <string name="sharedes">Share App With Friends And Family</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Welcome !</string>
    <string name="slide_1_desc">Get All Your Notifications On One Platform!</string>
    <string name="slide_2_title">Secure</string>
    <string name="slide_2_desc">Your Privacy Is Our Main Moto, Manage Notification Securely</string>
    <string name="slide_3_title">Easy To Use</string>
    <string name="slide_3_desc">Manage All Your Notification and Its Settings Easily</string>
    <string name="slide_4_title">All New UI</string>
    <string name="slide_4_desc">Now Enjoy The App With All New Features And User Interface In This Beta Version</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="settings_notificaton">Notifications</string>
    <string name="settings">Settings</string>
    <string name="settings_permissions">Permissions</string>
    <string name="settings_changelan">Language</string>
    <string name="settings_beta">Beta tester</string>
    <string name="settings_updates">Updates</string>
    <string name="settings_promocheck">Ongoing Log</string>
    <string name="settings_aboutus">About Us</string>
    <string name="settings_privacy">Privacy Policy</string>
    <string name="settings_tnc">Terms And Conditions</string>
    <string name="settings_notica">Notice</string>
    <string name="settings_logout">Log Out</string>
    <string name="about_us">At Xenon Studio, we believe everyone deserves to have a safe, secure and useful app.
        Innovation and simplicity makes us happy: our goal is to make AI reach every user, with the help of AI every user can feel his/her life easy.
        We Have partnered with Uptodown App Studio To make Amazing Notification App, where user can easily manage there phones notification
    App Developed By Xenon Studio,

    App Managed By UptoDown Apps Studio
        For More - www.xenonstudio.in/notificationlog</string>
    <string name="settings_ongoing">Log ongoing</string>
    <string name="settings_ongoing_summary">Log ongoing notifications, for example download progresses. Creates a large number of additional log entries.</string>
    <string name="snackbar_export">Exporting… please wait…</string>
    <string name="dialog_delete_header">Confirm deletion</string>
    <string name="dialog_delete_text">Do you really want to delete the log file? This cannot be undone.</string>
    <string name="dialog_delete_yes">Delete</string>
    <string name="dialog_delete_no">Cancel</string>
    <string name="settings_version">Version</string>
    <string name="details_error">Unable to load the details of this entry.</string>
    <string name="empty_log_file">No notifications logged yet!</string>
    <string name="open_notification_settings">Notification Settings</string>
    <string name="delete_dialog_title">Delete notification</string>
    <string name="delete_dialog_text">Do you really want to delete this notification? This cannot be undone.</string>
    <string name="delete_dialog_yes">Delete</string>
    <string name="delete_dialog_no">Cancel</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_selected_notif">SelectedNotifActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_help">Need Help ?</string>
    <string name="send_sug">Send Suggestions</string>
    <string name="help">Help</string>
    <string name="faqs">FAQs</string>
    <string name="heldet">Please Enter Details</string>
    <string name="paymentpromt">Query Type</string>
    <string name="report">Report Issue</string>
    <string name="settings_data">Help Us Improve App</string>
    <string name="settings_datamore">Allow The App To Send Anonymous Usage Of Data</string>
    <string name="title_activity_new_main">Notifications</string>
    <string name="splash_notification_history_log" translatable="false">Notification History Log</string>
    <string-array name="Query">
        <item>General Query</item>
        <item>Technical Query</item>
        <item>Other Query</item>

    </string-array>
    <string name="title_activity_home">HomeActivity</string>
    <string name="nav_stats">Statistics</string>
    <string name="nav_refer" translatable="false"><![CDATA[Refer & Earn]]></string>
    <string name="new_string">New</string>
    <string name="alert">Alert!</string>
    <string name="message_allow_permission">Please allow permission to use app.</string>
    <string name="text_ok">OK</string>
    <string name="message_no_notification">It Seems, No Notification Has Been Logged Yet!\n\nCome Back Once You Start Receiving Notification</string>
    <string name="button_retry">Retry</string>
    <string name="notification_access">Notification Access</string>
    <string name="message_need_notify_access">To Get Started, Enable Notification Access For Notification Log</string>
    <string name="allow_permission">Allow Permission</string>
    <string name="title_alert_beta">BETA Version</string>
    <string name="message_alert_beta">This Version Of App Is In Beta Testing, So You Might Get Bugs or App Might Not Work Well At Someplace.\nWe Request You To Report Us Any Bugs By Clicking On Help Button On Menu \n\nThank You For Using The Beta App, You Will Soon Get New Updated Version</string>
    <string name="button_got_it">Got It</string>
    <string name="button_report_issue">Report Issue</string>
    <string name="alert_title_tip">Tip !</string>
    <string name="alert_message_tip">You Can Even Read Deleted WhatsApp Messages*</string>
    <string name="search">Search</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="title_favorites">Favorites</string>
    <string name="remove">Remove</string>
    <string name="message_removed">Message removed from favorite!</string>
    <string name="message_no_favorite">No favorites yet.</string>
    <string name="message_add_favorite">Message added to favorites</string>
    <string name="enter_details">Enter Details</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_country">Country</string>
    <string name="query_general">General</string>
    <string name="query_technical">Technical</string>
    <string name="other_query">Other Query</string>
    <string name="your_query">Your Query</string>
    <string name="send">Send</string>
    <string name="message_help_error">Some error occurred, Do write your query at notificationappgp@gmail.com</string>
    <string name="message_query_send">Query send successfully!</string>
    <string name="notification_logged" translatable="false">Notification Logged</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="open_app">Open App</string>
    <string name="more_info">More Info</string>
    <string name="check_your_internet_connection">Check Your Internet Connection !</string>
    <string name="notification_updates"><![CDATA[Notifications & Updates]]></string>
    <string name="message_notification_update">All The Updates, Offers, Promocodes Will Be Here</string>
    <string name="title_app_whatsapp" translatable="false">WhatsApp</string>
    <string name="title_app_gmail" translatable="false">Gmail</string>
    <string name="title_app_facebook" translatable="false">Facebook</string>
    <string name="title_app_instagram" translatable="false">Instagram</string>
    <string name="title_app_calendar" translatable="false">Calendar</string>
    <string name="title_app_telegram" translatable="false">Telegram</string>
    <string name="title_app_calls" translatable="false">Calls</string>
    <string name="language">Choose Language</string>
    <string name="more">More</string>
    <string name="backup_restore">Backup/Restore</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="info">Info</string>
</resources>