<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- <item
         android:id="@+id/menu_search"
         android:title="Search"
         android:hint="Search Your Query"
         android:icon="@drawable/ic_search_black_24dp"
         appcompat:actionViewClass="android.support.v7.widget.SearchView"
         appcompat:showAsAction="always"
         app:showAsAction="always|collapseActionView" />-->

    <!-- <item
         android:id="@+id/menu_settings"
         android:icon="@drawable/ic_settings_black_24dp"
         app:showAsAction="always"   android:title="Settings"/>-->
    <item
        android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_delete"
        android:title="@string/menu_delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_export"
        android:title="@string/menu_export"
        app:showAsAction="never" />

    <item
        android:id="@+id/backup_restore"
        android:orderInCategory="100"
        android:title="@string/backup_restore"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/backup"
                android:title="@string/backup"
                app:showAsAction="never" />
            <item
                android:id="@+id/restore"
                android:title="@string/restore"
                app:showAsAction="never" />

        </menu>
    </item>

    <!-- <item
         android:id="@+id/menu_privacy"
         android:title="@string/shareapp"
         app:showAsAction="never" />-->
    <!-- <item
         android:id="@+id/menu_help"
         android:title="@string/help"
         app:showAsAction="never" />-->
    <item
        android:id="@+id/action_red"
        android:orderInCategory="100"
        android:title="@string/more"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/menu_sug"
                android:title="@string/send_sug"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_info"
                android:title="@string/info"
                app:showAsAction="never"
                android:visible="false"/>

            <item
                android:id="@+id/report"
                android:title="@string/report"
                app:showAsAction="never" />


        </menu>


    </item>

    <item
        android:id="@+id/faqs"
        android:title="@string/faqs"
        app:showAsAction="never"
        android:visible="false"/>

</menu>