<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_all_notifications"
            android:icon="@drawable/ic_nav_all"
            android:iconTint="@color/colorText"
            android:title="@string/nav_browse" />
        <item
            android:id="@+id/nav_notifications_by_apps"
            android:icon="@drawable/ic_nav_apps"
            android:iconTint="@color/colorText"
            android:title="@string/nav_apps" />

        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_nav_stats"
            android:iconTint="@color/colorText"
            android:title="@string/nav_stats"
            app:actionViewClass="android.widget.TextView" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_nav_setting"
            android:iconTint="@color/colorText"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_nav_fav"
            android:iconTint="@color/colorText"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_how_to_use"
            android:icon="@drawable/ic_nav_tutorial"
            android:iconTint="@color/colorText"
            android:title="@string/nav_tutorial" />

        <item
            android:id="@+id/nav_export_logs"
            android:icon="@drawable/ic_nav_share"
            android:iconTint="@color/colorText"
            android:title="@string/nav_share" />

        <item
            android:id="@+id/nav_refer"
            android:icon="@drawable/ic_monetization_on_black_24dp"
            android:title="@string/nav_refer"
            android:visible="false" />


        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_nav_help"
            android:iconTint="@color/colorText"
            android:title="@string/help" />
    </group>

</menu>
