<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:enabled="true"
        android:key="pref_entries"
        android:layout="@layout/pref_logged"
        android:summary="0"
        android:title="@string/settings_entries"
        app:iconSpaceReserved="false" />


    <!--<androidx.preference.Preference

        android:key="pref_entries"
        android:title="@string/settings_entries"
        android:summary="0"
        android:enabled="true"
        app:iconSpaceReserved="false"

        android:theme="@style/preferenceTheme"/>
-->

    <androidx.preference.Preference
        android:key="pref_status"
        android:layout="@layout/pref_status_layoiut"
        android:summary="@string/settings_notification_access_unknown"
        android:textColor="@color/titilewhite"
        android:title="@string/settings_status"
        app:iconSpaceReserved="false" />


    <androidx.preference.Preference
        android:key="pref_browse"
        android:layout="@layout/preferences_category"
        android:title="@string/nav_browse"
        app:iconSpaceReserved="false" />
    android:textColor="@color/titilewhite"
    android:key="pref_browse"
    android:title="@string/settings_browse"
    app:iconSpaceReserved="false" />


    <!-- <SwitchPreference
         android:key="pref_text"
         android:title="@string/settings_text"
         android:summary="@string/settings_text_summary"
         android:defaultValue="true"
         app:iconSpaceReserved="false" />

     <SwitchPreference
         android:key="pref_ongoing"
         android:title="@string/settings_ongoing"
         android:summary="@string/settings_ongoing_summary"
         android:defaultValue="false"
         app:iconSpaceReserved="false" />-->


    <!--<Preference
         android:key="pref_version"
         android:title="@string/settings_version"
         android:summary="0"
         android:enabled="false"
         app:iconSpaceReserved="false" />-->

</androidx.preference.PreferenceScreen>